<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Menus -->
    <string name="app_name">Stumblr</string>
    <string name="action_cancel">Cancel</string>

    <!-- Home -->
    <string name="create_waypoint">Create Waypoint</string>
    <string name="create_route">Create Route</string>

    <!-- CreateRoute -->
    <string name="route_title">Route Title</string>
    <string name="short_desc">Short Route Description</string>
    <string name="long_desc">Long Route Description</string>
    <string name="next">Next</string>

    <!-- CreateWaypoint -->
    <string name="location_image">Location Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="updateLocation">Update Location</string>
    <string name="wp_title">Waypoint Title</string>
    <string name="wp_shortdesc">Short Description</string>

    <string name="finish_route">Finish Route</string><string name="upload_walk">Upload Walk!</string>
    <string name="add_waypoint">Add Waypoint</string>
    <string name="placeholder_image">Placeholder image</string><string name="exit">Exit</string>
</resources>
