<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:windowSoftInputMode="stateAlwaysHidden|adjustResize|adjustPan" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:windowSoftInputMode="stateAlwaysHidden|adjustResize|adjustPan"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:minWidth="240dp"
            android:minHeight="240dp"
            android:onClick="getImage"
            android:background="@drawable/image_placeholder"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/location_image"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wp_title"
            android:id="@+id/wpTitle"
            android:layout_marginTop="30dp"
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/wptitle_box"
            android:inputType="textCapWords"
            android:layout_gravity="center_horizontal"
            android:maxLength="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wpDescription"
            android:text="@string/wp_shortdesc"
            android:layout_marginTop="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:ems="10"
            android:id="@+id/wpshortdesc_box"
            android:layout_gravity="center_horizontal"
            android:maxLength="100" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/create_button"
            android:layout_gravity="center_horizontal"
            android:onClick="finishWaypoint"
            android:layout_marginTop="30dp" />

    </LinearLayout>

</ScrollView>